// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Caption /> render Caption with defalut props 1`] = `
<p
  className="mfui-caption mfui-caption_color_default mfui-caption_space_wide mfui-caption_variant_normal mfui-caption_has-margin"
>
  Test caption text
</p>
`;

exports[`<Caption /> render Caption with passed props 1`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_purple mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with align prop 1`] = `
<p
  className="mfui-caption mfui-caption_align_center mfui-caption_color_purple mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with align prop 2`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_purple mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with color prop 1`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_inherit mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with color prop 2`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_default mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with color prop 3`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_gray mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with color prop 4`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_white mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with color prop 5`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_green mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with color prop 6`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_purple mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with hasMargin prop 1`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_purple mfui-caption_space_wide mfui-caption_variant_normal mfui-caption_has-margin test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with hasMargin prop 2`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_purple mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with space prop 1`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_purple mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with space prop 2`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_purple mfui-caption_space_tight mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with variant prop 1`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_purple mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;

exports[`<Caption /> render with variant prop 2`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_purple mfui-caption_space_wide mfui-caption_variant_medium test"
>
  Test caption text
</p>
`;
